[gd_scene load_steps=14 format=3 uid="uid://baqkss15qei4o"]

[ext_resource type="Script" uid="uid://bx8xho5ydd5p2" path="res://data/scripts/full_map_land_generator.gd" id="1_oj6ua"]
[ext_resource type="TileSet" uid="uid://1cd1sq8oqaw6" path="res://data/tilesets/test_prog_land_gn_ts.tres" id="2_oj6ua"]
[ext_resource type="Script" uid="uid://dvpdugoelvnhr" path="res://data/scripts/2d_top_down_camera.gd" id="3_ac5hw"]
[ext_resource type="Script" uid="uid://cpyeaukwp3mff" path="res://data/slice_map_division_generator.gd" id="3_crary"]
[ext_resource type="Script" uid="uid://csw0a3s88dgxd" path="res://data/scripts/fps_label.gd" id="4_cyup7"]
[ext_resource type="Script" uid="uid://xwhjgghec3h0" path="res://data/scripts/final_map_generator.gd" id="4_q6ydm"]
[ext_resource type="Script" uid="uid://ffkafsg5atw7" path="res://data/scripts/select_region_handler.gd" id="5_5d77b"]
[ext_resource type="Script" uid="uid://cpoc0ao3ajfb0" path="res://data/scripts/pos_debug_awawa.gd" id="8_2frr3"]

[sub_resource type="Curve" id="Curve_2frr3"]
_data = [Vector2(0, 1), 0.0, -0.978495, 0, 1, Vector2(1, 0.0215054), -0.978495, 0.0, 1, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_1a77p"]
colors = PackedColorArray(1, 1, 0.807843, 0, 1, 1, 0.807843, 0.486275)

[sub_resource type="Gradient" id="Gradient_2frr3"]
colors = PackedColorArray(0, 0, 0, 0.0784314, 1, 1, 1, 0.0784314)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5d77b"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2frr3"]
width = 4500
height = 4500
generate_mipmaps = false
color_ramp = SubResource("Gradient_2frr3")
noise = SubResource("FastNoiseLite_5d77b")

[node name="full_map_land_generator" type="Node2D" node_paths=PackedStringArray("tilemap", "border_layer", "final_map_layer", "slice_map_layer", "camera")]
script = ExtResource("1_oj6ua")
tilemap = NodePath("main_biome_map_layer")
border_layer = NodePath("border_map_layer")
final_map_layer = NodePath("final_map_layer")
slice_map_layer = NodePath("slice_map_layer")
camera = NodePath("TopDown2DGenericCamera")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -6436.0
offset_top = -3538.0
offset_right = 6497.0
offset_bottom = 3383.0
color = Color(1, 0, 1, 1)

[node name="main_biome_map_layer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_oj6ua")
collision_enabled = false

[node name="border_map_layer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_oj6ua")
collision_enabled = false

[node name="slice_map_layer" type="TileMapLayer" parent="."]
visible = false
tile_set = ExtResource("2_oj6ua")
collision_enabled = false

[node name="final_map_layer" type="TileMapLayer" parent="."]
visible = false
tile_set = ExtResource("2_oj6ua")
collision_enabled = false

[node name="empty_hover_region_layer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_oj6ua")

[node name="slice_map_division_generator" type="Node2D" parent="." node_paths=PackedStringArray("slice_map_layer", "main_map_gen_node")]
script = ExtResource("3_crary")
slice_map_layer = NodePath("../slice_map_layer")
main_map_gen_node = NodePath("..")

[node name="final_map_generator" type="Node2D" parent="." node_paths=PackedStringArray("slice_map_layer", "main_biome_map_layer", "final_map_layer", "main_generator_node")]
script = ExtResource("4_q6ydm")
slice_map_layer = NodePath("../slice_map_layer")
main_biome_map_layer = NodePath("../main_biome_map_layer")
final_map_layer = NodePath("../final_map_layer")
main_generator_node = NodePath("..")

[node name="select_region_handler" type="Node2D" parent="." node_paths=PackedStringArray("main_map_node", "empty_hover_region_layer", "pop_up_origin_line")]
script = ExtResource("5_5d77b")
main_map_node = NodePath("..")
empty_hover_region_layer = NodePath("../empty_hover_region_layer")
pop_up_origin_line = NodePath("../pop_up_origin_line")

[node name="pop_up_origin_line" type="Line2D" parent="."]
z_index = 11
width = 350.0
width_curve = SubResource("Curve_2frr3")
gradient = SubResource("Gradient_1a77p")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 10
offset_right = 1000.0
offset_bottom = 1000.0
texture = SubResource("NoiseTexture2D_2frr3")
script = ExtResource("8_2frr3")

[node name="TopDown2DGenericCamera" type="Camera2D" parent="." node_paths=PackedStringArray("tilemap_to_clamp_to", "main_node")]
script = ExtResource("3_ac5hw")
zoom_val = Vector2(0.25, 0.25)
scroll_speed = 850.0
tilemap_to_clamp_to = NodePath("../main_biome_map_layer")
main_node = NodePath("..")
metadata/_custom_type_script = "uid://dvpdugoelvnhr"

[node name="fps_label" type="Label" parent="TopDown2DGenericCamera"]
offset_left = 855.0
offset_top = -525.0
offset_right = 895.0
offset_bottom = -476.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "FPS:
"
script = ExtResource("4_cyup7")

[node name="being_hovered_label" type="Label" parent="TopDown2DGenericCamera/fps_label"]
layout_mode = 0
offset_left = -150.0
offset_top = 50.0
offset_right = 63.0
offset_bottom = 137.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "being_hovered
"
